# rayNEAT

./: .gitignore  CMakeLists.txt  README.md
code/: improvement.txt  main.cpp
code/NEAT/: activation_functions.cpp  connection_gene.cpp  neat.cpp  network.cpp  rayNEAT.h  utility.cpp
code/scenarios/TicTacToe/: tictactoe.cpp  tictactoe.h
code/scenarios/XOR/: XOR.cpp  XOR.h
code/scenarios/connect4/: connect4.cpp  connect4.h
code/scenarios/snake/: snake.cpp  snake.h  snake_agents.cpp
resources/: NEAT_Generation_100.rn
src/: main.cpp
src/NEAT/: neat.cpp  rayNEAT.h
src/scenarios/snake/: snake.cpp  snake.h  snake_agents.cpp
